Use PATH_COLOR_ALPHA instead of PATH_COLOR_ARGB for some notification icons.

This means the color passed at runtime will be respected (orange, red,
etc., for notification toast; white for tray).

Bug: 757724
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I45e57d7f561fddfad1d4056944e59bea9199f923
Reviewed-on: https://chromium-review.googlesource.com/909411
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535723}
Former-commit-id: cab92226d6ea0075cc63ac4fe8e85eb8dbfd2a7c